remove not needed

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -627,13 +627,17 @@
     <Compile Include="Assets\Scripts\CameraManager.cs" />
     <Compile Include="Assets\Scripts\clickscr.cs" />
     <Compile Include="Assets\Scripts\CSU_UI_OUT.cs" />
-    <Compile Include="Assets\Scripts\CSUFAQDISEASE.cs" />
-    <Compile Include="Assets\Scripts\CSUFAQDRUG.cs" />
     <Compile Include="Assets\Scripts\CSUTrackerScreen.cs" />
     <Compile Include="Assets\Scripts\ExpandCollapse.cs" />
     <Compile Include="Assets\Scripts\Fade.cs" />
     <Compile Include="Assets\Scripts\FAQ.cs" />
+    <Compile Include="Assets\Scripts\FAQDDrugCSU.cs" />
+    <Compile Include="Assets\Scripts\FAQDiseaseCSU.cs" />
+    <Compile Include="Assets\Scripts\FAQDiseaseSAA.cs" />
+    <Compile Include="Assets\Scripts\FAQDrugSAA.cs" />
     <Compile Include="Assets\Scripts\FaqManager.cs" />
+    <Compile Include="Assets\Scripts\FAQViewCSU.cs" />
+    <Compile Include="Assets\Scripts\FAQViewSAA.cs" />
     <Compile Include="Assets\Scripts\InputValue.cs" />
     <Compile Include="Assets\Scripts\MessageDisplay.cs" />
     <Compile Include="Assets\Scripts\new_c.cs" />
